feat: get, create, update and delete work experiences
