# app/src/models/interfaces/WorkExperienceInterface.ts
@@ -1,0 +1,10 @@
+export interface WorkExperienceInterface {
+    name: string,
+    enterprise: string,
+    country: string,
+    region: string,
+    city: string,
+    initialDate: Date,
+    endDate: Date,
+    description: string
+}
